hover to header added the bug with scrollbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,6 @@ li.slick-active > div {
 
 /* Product carousel */
 
-.slick-track {
-  width: ;
+.slick-list {
+  width: 100%!important;
 }
-
