--- a/src/app/ui/home.module.css
+++ b/src/app/ui/home.module.css
@@ -19,7 +19,11 @@
 }
 
 .controls li {
-    margin-right: 12px;
+    margin-right: 0.75rem;
+}
+
+.controls li:last-child {
+    margin-right: -0.75rem;
 }
 
 
